--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "linecorp/line-bot-sdk": "^7.6"
+        "linecorp/line-bot-sdk": "^7.6",
+        "predis/predis": "^2.2"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
