--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/tinker": "^2.5",
         "league/flysystem-aws-s3-v3": "^1.0",
         "linecorp/line-bot-sdk": "^7.6",
-        "predis/predis": "^2.2"
+        "predis/predis": "^2.2",
+        "ext-gd": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
