--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "ext-gd": "*",
         "barryvdh/laravel-dompdf": "^2.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -14,8 +15,7 @@
         "laravel/tinker": "^2.5",
         "league/flysystem-aws-s3-v3": "^1.0",
         "linecorp/line-bot-sdk": "^7.6",
-        "predis/predis": "^2.2",
-        "ext-gd": "*"
+        "predis/predis": "^2.2"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
